# ai-job-copilot

./: .gitignore  README.md  dev.sh
backend/: .env.example  README.md  pyproject.toml
backend/data/chroma_db/: chroma.sqlite3
backend/src/ai_job_copilot_backend/: __init__.py  main.py
backend/src/ai_job_copilot_backend/api/: documents.py  interview.py  resume_review.py
backend/src/ai_job_copilot_backend/core/: settings.py
backend/src/ai_job_copilot_backend/ingestion/: __init__.py  registry.py  service.py
backend/src/ai_job_copilot_backend/interview/: __init__.py  service.py
backend/src/ai_job_copilot_backend/providers/: __init__.py  base.py  embeddings.py  generation.py  pdf.py  text.py
backend/src/ai_job_copilot_backend/resume_review/: __init__.py  service.py
backend/src/ai_job_copilot_backend/retrieval/: __init__.py  chunking.py  service.py
backend/src/ai_job_copilot_backend/schemas/: __init__.py  documents.py  health.py  interview.py  resume_review.py  retrieval.py
backend/tests/: test_app.py  test_contracts.py  test_document_api.py  test_generation_provider.py  test_ingestion.py  test_interview_generation.py  test_interview_stream_api.py  test_pdf_provider.py  test_resume_review_analysis_service.py  test_resume_review_generation.py  test_resume_review_stream_api.py  test_retrieval.py
docs/plans/: 2026-03-19-ai-job-copilot-plan.md  2026-03-21-resume-review-unified-chat-design.md  2026-03-21-resume-review-unified-chat-implementation.md  2026-03-21-workspace-layout-design.md  2026-03-21-workspace-layout-implementation.md
docs/progress/: feature-checklist.md
frontend/: .gitignore  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/demo/: jd.txt
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/auth/: entry-gate.test.tsx  entry-gate.tsx
frontend/src/components/layout/: app-shell.tsx  page-header.tsx
frontend/src/components/results/: analysis-chat-panel.tsx  chat-message.test.tsx  chat-message.tsx  conversation-list.tsx  model-settings-card.tsx  prepared-review.test.tsx  prepared-review.tsx  request-bootstrap.test.tsx  request-bootstrap.tsx  results-workspace.test.tsx  (+1 more)
frontend/src/lib/: auth.ts  backend.ts  env.ts  resume-review-access-cookie.ts  resume-review-access.test.ts  resume-review-access.ts  resume-review-db.test.ts  resume-review-db.ts
(+27 files in other folders)
