[project]
name = "ai-job-copilot-backend"
version = "0.1.0"
description = "Backend API for AI Job Copilot."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.1.0,<2.0.0",
    "dashscope>=1.24.0,<2.0.0",
    "fastapi>=0.116.0,<1.0.0",
    "langchain>=0.3.27,<1.0.0",
    "langchain-chroma>=0.2.6,<1.0.0",
    "langchain-community>=0.3.31,<1.0.0",
    "langchain-openai>=0.3.35,<1.0.0",
    "langchain-text-splitters>=0.3.11,<1.0.0",
    "openai>=1.109.1,<2.0.0",
    "python-multipart>=0.0.20,<1.0.0",
    "pymupdf==1.27.2",
    "pydantic-settings>=2.10.1,<3.0.0",
    "uvicorn>=0.35.0,<1.0.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1,<1.0.0",
    "mypy>=1.18.2,<2.0.0",
    "pytest>=8.4.2,<9.0.0",
    "ruff>=0.13.2,<1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_job_copilot_backend"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
filterwarnings = [
    "ignore:builtin type SwigPyPacked has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type SwigPyObject has no __module__ attribute:DeprecationWarning",
    "ignore:builtin type swigvarlink has no __module__ attribute:DeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = "fitz"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "chromadb.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_chroma"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_openai"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_community.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "langchain_text_splitters"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dashscope"
ignore_missing_imports = true
